# HEPnOS-Dataloader

./: CMakeLists.txt  ConfigBlockAdder.hpp  DataLoaderConfig.hpp  GenericBlock.hpp  dataloader.cc  split_configs.hpp
dataformat/: _all_.hpp  neutrino.hpp  neutrino_beam.hpp  neutrino_genVersion.hpp  neutrino_michel.hpp  neutrino_prim.hpp  neutrino_prim_daughterlist.hpp  neutrino_rwgt_genie.hpp  neutrino_rwgt_ppfx.hpp  neutrino_rwgt_ppfx_vuniv.hpp  rec_energy_nue.hpp  rec_energy_nue_lid.hpp  rec_energy_numu.hpp  rec_energy_numu_bpfenergy.hpp  rec_energy_numu_hadclust.hpp  rec_energy_numu_mc.hpp  rec_hdr.hpp  rec_mc.hpp  rec_mc_allcosmics.hpp  rec_mc_allcosmics_michel.hpp  rec_mc_allnus.hpp  rec_mc_allnus_beam.hpp  rec_mc_allnus_genVersion.hpp  rec_mc_allnus_michel.hpp  rec_mc_allnus_prim.hpp  rec_mc_allnus_prim_daughterlist.hpp  rec_mc_allnus_rwgt_genie.hpp  rec_mc_allnus_rwgt_ppfx.hpp  rec_mc_allnus_rwgt_ppfx_vuniv.hpp  rec_mc_cosmic.hpp  rec_mc_cosmic_michel.hpp  rec_mc_global.hpp  rec_mc_nu.hpp  rec_mc_nu_beam.hpp  rec_mc_nu_genVersion.hpp  rec_mc_nu_michel.hpp  rec_mc_nu_prim.hpp  rec_mc_nu_prim_daughterlist.hpp  rec_mc_nu_rwgt_genie.hpp  rec_mc_nu_rwgt_ppfx.hpp  (+664 more)
src/: DataLoader.cpp  WorkQueue.hpp  _test_.hpp  dataloader.cc
test/ci/theta/: config.yaml  datafiles.txt  jenkins-theta.sh  run.qsub
theta/: 1file.txt  50files.txt  8files.txt  config.yaml  datafiles.txt  run.qsub
